Add pretty printing configuration + Switch to gson